--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,12 @@
+    :root {
+    --main-color: rgb(19, 197, 19);
+    --secondary-color: rgb(84, 84, 215);
+    --dih-color: rgb(100, 47, 47);
+    --text-color: white;
+    --shadow: 0px 10px 5px rgba(0, 0, 0, 0.203),
+              0px 15px 10px rgba(93, 90, 90, 0.263);
+    --transition: all 0.3s ease;
+}  
     * {
    transition: var(--transition);
 }
