--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --text-color: white;
     --shadow: 0px 10px 5px rgba(0, 0, 0, 0.203),
               0px 15px 10px rgba(93, 90, 90, 0.263);
-    --transition: all 3s ease;
+    --transition: all 0.3s ease;
 }
 * {
    transition: var(--transition);
@@ -43,7 +43,7 @@ button {
 }
 
 button:hover {
-    background-color: aquamarine;
+    background-color: rgb(8, 222, 222);
 }
 
  .navbar1 {
@@ -67,11 +67,24 @@ button:hover {
       padding: 14px 20px;
       text-decoration: none;
       font-size: xx-large;
+      transform: translateX(150px);
     }
 
     .navbar1 a:hover {
-      background-color: #575757;
+      color: bisque;
+      transform: translateY(-5px) translateX(150px);
     }
+
+.navbar1 h1 {
+  color: var(--secondary-color);
+  transform: translateX(250px);
+  text-shadow: #333;
+  font-weight: 600;
+}
+
+.navbar1 h1:hover {
+  transform: translateY(-5px) translateX(250px);
+}
 
     .navbar1 button {
       background-color: #333;
