--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ button:hover {
  .navbar1 {
       display: flex;
       flex-direction: row;
-      background-color: #333;
+      background-color: blueviolet;
       overflow: hidden;
       position: fixed; /* jää näkyviin sivun yläreunaan */
       top: 0;
@@ -76,7 +76,7 @@ button:hover {
     }
 
 .navbar1 h1 {
-  color: var(--secondary-color);
+  color: black;
   transform: translateX(250px);
   text-shadow: #333;
   font-weight: 600;
